2009-09-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailMainFrame.m (-_setupContext): if
	"moduleSettings" is non-nil, we don't reset it in the user
	defaults.
	(-composeAction): autorelease "addresses" to avoid a leak.

2009-09-29  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m (PUTAction:, _appendMessageData:usingId:):
	Added new methods to enable MailDAV PUT on a collection.
	* SoObjects/Mailer/SOGoMailBaseObject.m (IMAP4IDFromAppendResult:): Moved
	here, since SOGoDraftObject and SOGoMailFolder need it.
	* SoObjects/Mailer/SOGoDraftObject.m (_IMAP4IDFromAppendResult): Removed, 
	replaced by [SOGoMailBaseObject IMAP4IDFromAppendResult:].
	* SoObjects/SOGo/SOGoObject.m: Changed file extension from "mail" to "eml".
	* SoObjects/Mailer/SOGoMailAccount.m: Added accountName to fix errors in MailDAV.
	* SoObjects/Mailer/SOGoMailAccounts.m: Added management for account names
	to fix errors in MailDAV.
	* SoObjects/Mailer/SOGoMailFolder.m (appendMessage:): Added this method to
	facilitate the PUT from a SOGoMailObject.
	* SoObjects/Mailer/SOGoMailObject.m (PUTAction:): Added to enable MailDAV
	PUT on a non-existing object.
	* UI/MailerUI/UIxMailMainFrame.m (mailAccounts): Changed the return value to
	include both the account name and display name.
	* UI/MailerUI/UIxMailMainFrame.m: Fixed an error when composing from the
	Address Book module.

2009-09-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m (SOGoSelectorForPropertyGetter)
	(SOGoSelectorForPropertySetter): fixed a case where propSel should
	be initialized to NULL.

	* SoObjects/SOGo/SOGoGroup.m (-members): we now cache the array of
	members as an ivar.
	(-hasMemberWithUID): new self-explicit method.

	* SoObjects/SOGo/SOGoGCSFolder.m
	(_fetchAclsForUser:forObjectAtPath:): refactored method to make it
	actually work for group searches, without unitialized data and to
	clarify code.

	* SoObjects/SOGo/SOGoObject.m